Designing landing page with navbar, implementing flashes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner image-banner">
+  <div class="banner-content">
+    <h1>Electric cars</h1>
+    <p><span id="banner-typed-text"></span></p>
+    <p>Take part in the future of mobility</p>
+    <%# <%= render "shared/form" %>
+  </div>
+</div>
