--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,11 @@
   </head>
 
   <body>
+    <%= render 'shared/navbar' %>
+    <%= render 'shared/flashes' %>
+
     <%= yield %>
+
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
