Designing landing page with navbar & footer, implementing flashes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,8 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-
     <%= yield %>
-
+    <%= render "shared/footer" %>
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
