added typed.js, allert and noticed also visualized with red and green banner, search form DONE

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="banner image-banner">
   <div class="banner-content">
-    <h1>Electric cars</h1>
     <p><span id="banner-typed-text"></span></p>
-    <p>Take part in the future of mobility</p>
+    <h1>E-Cars Station</h1>
     <%# <%= render "shared/form" %>
+    <%= render 'shared/form' %>
   </div>
 </div>
