--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -13,12 +13,12 @@ $font-size-base: 1rem;
 $body-color: $gray;
 $primary:    $blue;
 $success:    $green;
-$info:       $yellow;
+$info:       #138496;
 $danger:     $red;
 $warning:    $orange;
 
 // Buttons & inputs' radius
-$border-radius:    2px;
+$border-radius:    4px;
 $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 
