--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,7 @@
     <%= render 'shared/flashes' %>
     <%= yield %>
     <%= render "shared/footer" %>
-
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <p class="notice"><% notice %></p>
+    <p class="alert"><% alert %></p>
   </body>
 </html>
