--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row justify-content-center align-items-center">
     <div class="col-md-4 col-md-offset-4">
 
       <h2 class="text-center">Forgot your password?</h2>
@@ -15,7 +15,7 @@
         </div>
 
         <div class="form-actions custom-btn">
-          <%= f.button :submit, "Send me reset password instructions" %>
+          <%= f.button :submit, "Send me reset password instructions", class: "custom-btn form-control" %>
         </div>
       <% end %>
 
