--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row justify-content-center align-items-center">
     <div class="col-md-4 col-md-offset-4">
       <h2 class="text-center">Sign up</h2>
     
