--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -9,19 +9,25 @@
         <%#= render "shared/form_index" %>
         <div class="categories-container">
           <div class="category-item tag compact">
-            <%= image_tag "logo.png", class: "img-icon" %>
-            <h5>Compact city</h5>
+            <%= image_tag "compact.png", class: "img-icon" %>
+            <h5>Compact</h5>
+          </div>
+          <div class="seperate">
           </div>
           <div class="category-item tag family">
-            <%= image_tag "logo.png", class: "img-icon" %>
-            <h5>Family car</h5>
+            <%= image_tag "family.png", class: "img-icon" %>
+            <h5>Family</h5>
+          </div>
+          <div class="seperate">
           </div>
           <div class="category-item tag sport">
-            <%= image_tag "logo.png", class: "img-icon" %>
-            <h5>Sports car</h5>
+            <%= image_tag "speed.png", class: "img-icon" %>
+            <h5>Sports</h5>
+          </div>
+          <div class="seperate">
           </div>
           <div class="category-item tag all-rounder">
-            <%= image_tag "logo.png", class: "img-icon" %>
+            <%= image_tag "all.png", class: "img-icon" %>
             <h5>All-rounder</h5>
           </div>
         </div>
