--- a/app/assets/stylesheets/components/_result-grid.scss
+++ b/app/assets/stylesheets/components/_result-grid.scss
@@ -99,17 +99,24 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border-radius: 2px;
 }
 
 .category-item {
   padding: 11px;
   margin: 24px 10px 0px 10px;
   flex: 1, 1, auto;
-  border-radius: 4px 70px;
+  /* border-radius: 4px 70px; */
   width: 120px;
 }
 
+.seperate {
+  margin: 20px 1px 20px 0px;
+  border-width: 90px 1px 0 0;
+  border-color: black;
+  border-style: solid;
+}
+
+/* 
 .compact {
   background: linear-gradient(135deg, rgba(255, 126, 95, 1) 0%, rgba(254, 180, 123, 1) 90%);
 }
@@ -125,6 +132,7 @@
 .all-rounder {
   background: linear-gradient(135deg, rgba(255, 216, 155, 1) 0%, rgba(25, 84, 123, 1) 90%);
 }
+*/
 
 
 .category-item > h5 {
@@ -133,8 +141,7 @@
   margin: 5px 20px 0px 20px;
   padding-top: 7px;
   padding-left: 7px;
-  color: rgba(240, 240, 240, 0.9);
-  text-shadow: 1px 1px rgba(200, 200, 200, 0.7);
+  color: rgb(7, 7, 7);
 }
 
 .img-icon {
