--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -44,26 +44,20 @@
         <div class="card" style="background-image: url(http://kitt.lewagon.com/placeholder/cities/barcelona)">
           Barcelona
         </div>
-        
-        <!-- <% @cars.each do |car| %>
-        <div class="col-xs-12 col-sm-4">
-          <%= link_to car_path(@search_params.merge(id: car.id)) do %>
-          <div class="results-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path car.photo, height: 300, width: 400, crop: :fill if car.photo.present? %>');">
-          </div>
-          <div class="results-detail">
-            <h4><%= car.title %></h4>
-            <p><span class="light-words">from </span><%= car.price_per_day %>€/night</p>
-          </div>
-          <% end %>
-        </div>
-        <% end %> -->
       </div>
-
     </div>
-
-    <img id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.3381,48.8693,10.45,0,0/600x1000?access_token=pk.eyJ1Ijoic3RlcGg5MXMiLCJhIjoiY2tkYTVvNzAxMGVyYzJxcnhmcmtiaGFlYiJ9.LO5xB_PwOWrrhzmAF72esQ'>   
+  
 
 
   </div>
 
+</div>
+
+<%= link_to 'New car', new_car_path %>
+<br>
+
+<div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
