--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -3,3 +3,10 @@
 <% if policy(Car).create? %>
     <%= link_to "New car", new_car_path %>
 <% end %>
+
+<%= simple_form_for @car do |f| %>
+    <%= f.input :brand %>
+    <%= f.input :model %>
+    <%= f.input :location %>
+    <%= f.submit %>
+<% end %>
