--- a/app/views/cars/_info_window.html.erb
+++ b/app/views/cars/_info_window.html.erb
@@ -1,5 +1,6 @@
-<div class="container">
+<div class="container" style="background-color: aliceblue; background-size: 100%;">
     <h2><%= car.brand %></h2>
+    <h6><%= car.model %> </h6>
     <p><%= car.location %></p>
-    <p><%= car.price_per_day %></p>
+    <p><%= car.price_per_day %>€/day</p>
 </div>
