--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -8,5 +8,5 @@
 
   <%= select_tag 'cars[number_of_guest]', options_for_select([['1'], ['2'], ['3'], ['4']]), class: "form-control text-center unselected", id: 'guest', prompt: "Guests" %>
 
-  <%= submit_tag "Search", class: "btn btn-info" %>
+  <%= submit_tag "Search", class: "btn btn-info search" %>
 <% end %>
