User dashboard view, controller & model

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -14,7 +14,7 @@
 
     <div class="tabs">
         <a href="#" class="guest tab tab-guest active">My trips</a>
-        <a href="#" class="host tab tab-host">My hostings</a>
+        <a href="#" class="host tab tab-host">My rentings</a>
     </div>
 
     <div class="row">
