--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "Create an offer", new_car_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "My Trips", bookings_path, class: "nav-link" %>
+          <%= link_to "Dashboard", bookings_path, class: "nav-link" %>
         </li>
 
         <li class="nav-item dropdown">
