Create Cars form

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -22,7 +22,7 @@
     letter-spacing: 10px;
   }
   
-  .image-banner {
+  .image-banner-home {
     background-image: linear-gradient(-225deg,
   rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), asset-url('mobility.jpg');
   }
