--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner image-banner">
+<div class="banner image-banner-home">
   <div class="banner-content">
     <p><span id="banner-typed-text"></span></p>
     <h1>E-Cars Station</h1>
