car show page mostly done

--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -37,7 +37,9 @@
       <div class="results-cards">
         <% @cars.each do |car| %>
           <div class="card">
-            <%= image_tag car.photo, crop: :cover %>
+            <% if car.photo.attached? %>
+              <%= image_tag car.photo, crop: :cover %>
+            <% end %>
             <h2><%= car.brand %></h2>
             <div class="results-detail">
               <div>
@@ -46,7 +48,7 @@
               <div><p><span class="light-words"></span><%= car.price_per_day %>€/day</p></div>
             </div>
           </div>
-        <% end %>         
+        <% end %>
       </div>
     </div>
     <div id="map"
