Home Page fixed - Dashboard FINISHED (Connection between create and booking index 100%) - TO BE DONE: VALIDATION, SEARCH ENGINE

--- a/app/assets/stylesheets/components/_search-bar.scss
+++ b/app/assets/stylesheets/components/_search-bar.scss
@@ -30,7 +30,17 @@
   margin-left: 5px;
 }
 
+.container-search {
+  display:  flex;
+}
+
+.ap-input-icon {
+  display: none !important;
+}
+
 .algolia {
+  flex: auto 1;
   color: black;
   text-align: left;
+  width: 800px;
 }
