--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -30,11 +30,18 @@
   <div class="booking-request">
 
     <h1>Booking:</h1>
-    <%= form_tag bookings_path, method: :post, class: 'form-inline' do %>
-      <%= date_field 'cars[check_in_date]', nil, class: "form-control datepicker text-center date-input", placeholder: "Starting Line" %>
-      <%= date_field 'cars[check_out_date]', nil, class: "form-control datepicker text-center date-input", placeholder: "Finish Line" %>
-      <%= select_tag 'cars[number_of_guest]', options_for_select([['1'], ['2'], ['3'], ['4']]), class: "form-control text-center unselected", id: 'guest', prompt: "Guests" %>
-      <%= submit_tag "Book", class: "btn btn-info search" %>
+    <%# <%= form_tag bookings_path, method: :post, class: 'form-inline' do %>
+      <%# <%= date_field 'cars[check_in_date]', nil, class: "form-control datepicker text-center date-input", placeholder: "Starting Line" %>
+      <%#= date_field 'cars[check_out_date]', nil, class: "form-control datepicker text-center date-input", placeholder: "Finish Line" %>
+      <%#= select_tag 'cars[number_of_guest]', options_for_select([['1'], ['2'], ['3'], ['4']]), class: "form-control text-center unselected", id: 'guest', prompt: "Guests" %>
+      <%#= submit_tag "Book", class: "btn btn-info search" %>
+    <%# end %>
+
+    <%= simple_form_for [@car, @booking] do |f| %>
+      <%= f.input :check_in_date, as: :date, label: "Starting Date" %>
+      <%= f.input :check_out_date, as: :date, label: "Finishing Date" %>
+      <%= f.input :number_of_guest, collection: 1..4, label: "Guest" %>
+      <%= f.submit %>
     <% end %>
 
   </div>
