--- a/app/assets/stylesheets/components/_dashboard-tabs.scss
+++ b/app/assets/stylesheets/components/_dashboard-tabs.scss
@@ -1,36 +1,38 @@
 .inbox {
   display: inline-block;
   justify-content: space-between;
-  padding-left: 0px;
-  list-style: none;
-  font-size: 14px;
-  margin: 20px;
+  align-items: center !important;
+  padding: 0;
+  margin: 20px 0;
   width: 100%;
   background-color: white;
 }
 
-.invite {
-position: relative;
-background-color: rgba(220, 220, 220, 0.8);
-border-radius: 5px;
-// opacity: 0.7;
-width: 100%;
-margin-bottom: 50px !important;
+.head-con {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .invite-content {
 display: flex;
-justify-content: space-around;
+justify-content: space-evenly;
 align-items: center;
 padding: 10px;
 text-align: center;
-} p {
+background-color: rgba(220, 220, 220, 0.8);
+border-radius: 5px;
+// opacity: 0.7;
+width: 80%;
+height: 10vh;
+margin: 0 auto;
+  p {
   margin: 23px;
+  }
 }
 
 .invite-content .fa-eur {
   font-size: 30px;
-  position: absolute;
   top: 10px;
   left: 10px;
 }
