--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,29 +9,29 @@
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <nav class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item active">
+        <div class="nav-item active">
           <%= link_to "Create an offer", new_car_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
+        </div>
+        <div class="nav-item dashboard">
           <%= link_to "Dashboard", bookings_path, class: "nav-link" %>
-        </li>
+        </div>
 
-        <li class="nav-item dropdown">
+        <div class="nav-item dropdown">
           <%= image_tag "tesla.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <!-- <%= link_to "Action", "#", class: "dropdown-item" %>
             <%= link_to "Another action", "#", class: "dropdown-item" %> -->
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
-        </li>
+        </div>
 
       <% else %>
-        <li class="nav-item">
+        <div class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
+        </div>
       <% end %>
-    </ul>
+    </nav>
   </div>
 </div>
