PG SEARCH ON THE HOME PAGE IS NOW CONNECtED TO MAP AND CARS THROUGH :LOCATION, :BRAND AND :CATEGORY

--- a/app/assets/stylesheets/components/_search-bar.scss
+++ b/app/assets/stylesheets/components/_search-bar.scss
@@ -32,14 +32,10 @@
 
 .container-search {
   display:  flex;
-}
-
-.ap-input-icon {
-  display: none !important;
+  margin-top: 50px;
 }
 
 .algolia {
-  flex: auto 1;
   color: black;
   text-align: left;
   width: 800px;
