--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -15,7 +15,7 @@ $primary:    $blue;
 $success:    $green;
 $info:       #138496;
 $danger:     $red;
-$warning:    $orange;
+$warning:    #053961;
 
 // Buttons & inputs' radius
 $border-radius:    4px;
