--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,13 +5,11 @@
     All rights reserved.
   </div>
   <div>
-    <h6>Follow us</h6>
+    <h6>Collaborators</h6>
     <div class="footer-links">
-      <a href="#"><i class="fab fa-github"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/aronzieger" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/Ninovation-lab" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/Steph91s" target="_blank"><i class="fab fa-github"></i></a>
     </div>
   </div>
 </div>
