--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -5,6 +5,6 @@
       class: "form-control",
       placeholder: "Type in your favorite E-Car"
     %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
+    <%= submit_tag "Search", class: "btn btn-warning" %>
   </div>
 <% end %>
