--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -5,6 +5,11 @@
       class: "form-control",
       placeholder: "Type in your favorite E-Car"
     %>
+    <%= text_field_tag :location,
+    params[:location],
+    class: "form-control",
+    placeholder: "Where do we want to go now?" 
+    %>
     <%= submit_tag "Search", class: "btn btn-primary" %>
   </div>
 <% end %>
