--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <nav class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <div class="nav-item active">
+        <div class="nav-item">
           <%= link_to "Create an offer", new_car_path, class: "nav-link" %>
         </div>
         <div class="nav-item dashboard">
